--- a/CS487Project/videos/templates/videos/master.html
+++ b/CS487Project/videos/templates/videos/master.html
@@ -44,5 +44,10 @@
 {% block content %}
 {% endblock %}
 </div>
+<address>
+<a href="/contact">Email us</a><br>
+Address:S.State Street, 60616<br>
+Phone: +312 666 9999
+</address>
 </body>
 </html>
