--- a/CS487Project/videos/templates/videos/view.html
+++ b/CS487Project/videos/templates/videos/view.html
@@ -47,13 +47,13 @@ please type in your comments.
 <p>name3 rankings3</p>
 <p>comments3</p>
 
-</div>-->
+
 <address>
-<a href="mailto:da000@gmail.com">Email us</a><br>
+<a href="mailto:da000@gmail.com">Email us: jyz@hawk.iit.edu</a><br>
 Address:S.State Street, 60616<br>
 Phone: +312 666 9999
 </address>
-
+</div>-->
 <script type="text/javascript">
 function makeView() {
         var r = new XMLHttpRequest();
